@@ -196,8 +196,6 @@ class _rpm_install(I):
         return fedora_installation_command(self.pkgs)
 
 class N(I):
-    def visible(self):
-        return hasattr(self, 'pkgs')
     def self_check(self):
         if hasattr(self, 'pkgs'):
             is_package_names_string(self.pkgs)
@@ -217,6 +215,14 @@ class N(I):
                 print >>f, _('Because the packages "%s" are not installed.')%' '.join(not_installed),
     def installation_command(self):
         return self.installation_command_backend(self.pkgs)
+    def visible(self):
+        if not hasattr(self, 'pkgs'): return False # It is not supported for this Linux distribution.
+        # package names change from time to time. we hide an item if package_name does not exists. 
+        for pkg in self.pkgs.split():
+            if not self.backend.exist(pkg):
+                print self.__doc__, ' is hidden because package name changed.'
+                return False
+        return True
 
     if FEDORA:
         backend = RPM
